[gd_scene load_steps=6 format=3 uid="uid://c72rfmpf1pka0"]

[ext_resource type="PackedScene" uid="uid://b8p2yuy41jttd" path="res://objects/spaceships/_base/spaceship.tscn" id="1_ktjkf"]
[ext_resource type="Script" path="res://objects/spaceships/player_spaceship/player_spaceship.gd" id="1_rcvwh"]
[ext_resource type="AudioStream" uid="uid://usfflyk7myq5" path="res://assets/sounds/thrust.wav" id="2_v34wj"]
[ext_resource type="Resource" uid="uid://becu88nh2qpww" path="res://resources/weapon_resources/gun.tres" id="3_vfcw7"]

[sub_resource type="Gradient" id="Gradient_yj2uq"]
colors = PackedColorArray(0.699653, 0.699653, 0.699653, 0.341176, 1, 1, 1, 0)

[node name="PlayerSpaceship" groups=["player", "spaceships"] instance=ExtResource("1_ktjkf")]
script = ExtResource("1_rcvwh")
current_weapon = ExtResource("3_vfcw7")

[node name="Lines" type="Node2D" parent="." index="4"]

[node name="FuturePositions" type="Line2D" parent="Lines" index="0"]
width = 2.0
default_color = Color(0.415981, 0.41598, 0.41598, 1)
gradient = SubResource("Gradient_yj2uq")

[node name="ThrustSound" type="AudioStreamPlayer" parent="." index="6"]
stream = ExtResource("2_v34wj")
